# cmake-playground

./: CMakeLists.txt
include/libone/: lib_one.h
include/one/: exec_one.h
include/two/: exec_two.h
src/: exec_one.cpp  exec_two.cpp  lib_one.cpp
